--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "dependencies": {
     "@types/jest": "24.0.18",
     "@types/node": "12.7.9",
-    "@types/react": "16.9.4",
     "@types/react-dom": "16.9.1",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
     "react-scripts": "3.1.2",
+    "styled-components": "^4.4.0",
     "typescript": "3.6.3"
   },
   "scripts": {
@@ -32,5 +32,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react": "^16.9.4",
+    "@types/styled-components": "^4.1.19",
+    "eslint-plugin-react-hooks": "^2.1.1"
   }
 }
